k8s/delete-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: p-go-delete
  namespace: delete-books
spec:
  replicas: 2
  selector:
    matchLabels:
      app: p-go-delete
  template:
    metadata:
      labels:
        app: p-go-delete
    spec:
      containers:
        - name: p-go-delete
          image: gabrielagg07/delete-books:v2025.05.19-V1
          ports:
            - containerPort: 8080
