k8s/delete-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: p-go-delete-service
  namespace: delete-books
spec:
  selector:
    app: p-go-delete
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
